// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game State createGameState 1`] = `
{
  "displayedCard": "card2",
  "events": [
    {
      "card": "card1",
      "timestamp": 0,
      "type": "card-draw",
    },
    {
      "card": "card2",
      "timestamp": 0,
      "type": "card-draw",
    },
  ],
  "previousCards": [
    "card1",
  ],
  "seed": "{"stacks":[{"name":"stack1","ref":"stackRef","cards":[{"ref":"card1","text":"card1Text","annotations":[]},{"ref":"card2","text":"card2Text","annotations":[]},{"ref":"card3","text":"card3Text","annotations":[]}]}]}[{"type":"card-draw","card":"card1","timestamp":0},{"type":"card-draw","card":"card2","timestamp":0}]",
  "template": {
    "stacks": [
      {
        "cards": [
          {
            "annotations": [],
            "ref": "card1",
            "text": "card1Text",
          },
          {
            "annotations": [],
            "ref": "card2",
            "text": "card2Text",
          },
          {
            "annotations": [],
            "ref": "card3",
            "text": "card3Text",
          },
        ],
        "name": "stack1",
        "ref": "stackRef",
      },
    ],
  },
}
`;

exports[`Game State findCardInGameTemplate 1`] = `
{
  "annotations": [],
  "ref": "card1",
  "text": "card1Text",
}
`;

exports[`Game State getAllCards 1`] = `
[
  {
    "annotations": [],
    "ref": "card1",
    "text": "card1Text",
  },
  {
    "annotations": [],
    "ref": "card2",
    "text": "card2Text",
  },
  {
    "annotations": [],
    "ref": "card3",
    "text": "card3Text",
  },
]
`;

exports[`Game State getAvailableCards 1`] = `
[
  {
    "annotations": [],
    "ref": "card3",
    "text": "card3Text",
  },
]
`;
